# self

./: .gitignore  .pre-commit-config.yaml  .scalafmt.conf  README.md
data-engineering/: README.md
data-engineering/jobs/scala/playground/: build.sbt
data-engineering/jobs/scala/playground/src/main/scala/: Main.scala
diagram-as-code/: README.md  pyproject.toml
diagram-as-code/code-quality/: README.md  diagram.py
diagram-as-code/data-lakehouse/: README.md  diagram.py
diagram-as-code/mlops-sagemaker/: README.md  diagram.py
go/cli/: go.mod  go.sum  main.go
go/cli/cmd/: dirs.go  files.go  root.go
go/cli/dirs/: dirs.go
go/cli/files/: files.go
rust/kv_store/: .gitignore  Cargo.toml
rust/kv_store/src/: main.rs
